--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile  # specify the local Dockerfile name
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
-      - UVICORN_CMD=uvicorn aat_backend.main:app --host 0.0.0.0 --port 8000 --ssl-keyfile /app/key.pem --ssl-certfile /app/cert.pem --workers 4 --reload
-    volumes:
-      - ./aat_backend:/app  # adjust the volume path accordingly
+      - UVICORN_CMD=uvicorn aat_backend.main:app --host 0.0.0.0 --port 8000 --ssl-keyfile key.pem --ssl-certfile cert.pem --workers 4 --reload
